--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "particles-bg": "^2.3.12",
     "react": "^16.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
     "react-scripts": "1.0.17"
