--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "anix": "^0.3.3",
+    "babel-polyfill": "^6.26.0",
     "jquery": "^3.2.1",
     "particles-bg": "^2.3.12",
     "react": "^16.2.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-typist": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
